deploy: 98098d679135718034b1768bf7a4351d5cc93b46

--- a/fontbakery/googlefonts-NotoSansOriyaUI-report.html
+++ b/fontbakery/googlefonts-NotoSansOriyaUI-report.html
@@ -72,15 +72,15 @@
                 <th>✔️ PASS</th>
             </tr>
             <tr>
-                <td>0</td>
-                <td>12</td>
+                <td>2</td>
+                <td>10</td>
                 <td>15</td>
                 <td>232</td>
                 <td>13</td>
                 <td>183</td>
             </tr>
             <tr>
-                <td>0%</td>
+                <td>1%</td>
                 <td>3%</td>
                 <td>4%</td>
                 <td>67%</td>
@@ -90,19 +90,13 @@
             </table>
             
 <p><strong>Note:</strong> The following loglevels were omitted in this report: SKIP, INFO, PASS, DEBUG</p>
-<h2>&lt;Section: Google Fonts&gt; 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
+<h2>&lt;Section: Google Fonts&gt; 💥💥🔥🔥🔥🔥🔥🔥🔥🔥⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
 <h3>Check Google Fonts glyph coverage.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/glyph_coverage&gt;</div>
 
-<details><summary>🔥 <strong>fonts/NotoSansOriyaUI/googlefonts/ttf/NotoSansOriyaUI-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Missing required codepoints:</p>
-<pre><code>- 0x00AF (MACRON)
-</code></pre>
-<p>[code: missing-codepoints]</p>
+<details><summary>💥 <strong>fonts/NotoSansOriyaUI/googlefonts/ttf/NotoSansOriyaUI-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>💥 ERROR</span><span class='details_text'><p>Failed with IndexError: list index out of range</p>
 </span></li></ul></div></details>
-<details><summary>🔥 <strong>fonts/NotoSansOriyaUI/googlefonts/ttf/NotoSansOriyaUI-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Missing required codepoints:</p>
-<pre><code>- 0x00AF (MACRON)
-</code></pre>
-<p>[code: missing-codepoints]</p>
+<details><summary>💥 <strong>fonts/NotoSansOriyaUI/googlefonts/ttf/NotoSansOriyaUI-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>💥 ERROR</span><span class='details_text'><p>Failed with IndexError: list index out of range</p>
 </span></li></ul></div></details>
 <h3>Check copyright namerecords match license file.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/name/license&gt;</div>
@@ -164,25 +158,25 @@ aiLengthcandraBinduoriya.umbrella, rephaiLengthcandraBinduoriya.stem and rephaiL
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/unreachable_glyphs&gt;</div>
 
 <details><summary>⚠️ <strong>fonts/NotoSansOriyaUI/googlefonts/ttf/NotoSansOriyaUI-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- uni0B35.REV_BRACKET.141
+<pre><code>- uni0B39.REV_BRACKET.141
 
-- uni0B62.REV_BRACKET.141
+- uni0B08.REV_BRACKET.141
 
-- uni0B19.REV_BRACKET.141
+- charaoriya.REV_BRACKET.141
 
-- uni0B6B.REV_BRACKET.141
+- aicandraBinduoriya
 
-- uni0B37.REV_BRACKET.141
+- uni0B35.base.REV_BRACKET.141
 
-- uni0B0A.REV_BRACKET.141
+- uni0B42.REV_BRACKET.141
 
-- ngaraoriya.REV_BRACKET.141
+- uni0B24.REV_BRACKET.141
 
-- airephcandraBinduoriya
+- uni0B68.REV_BRACKET.141
 
-- uni0B07.REV_BRACKET.141
+- karaoriya.REV_BRACKET.141
 
-- uni0B1B.REV_BRACKET.141 
+- uni0B09.REV_BRACKET.141 
 
 - And 27 more.
 </code></pre>
@@ -190,25 +184,25 @@ aiLengthcandraBinduoriya.umbrella, rephaiLengthcandraBinduoriya.stem and rephaiL
 [code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ <strong>fonts/NotoSansOriyaUI/googlefonts/ttf/NotoSansOriyaUI-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- uni0B35.REV_BRACKET.141
+<pre><code>- uni0B39.REV_BRACKET.141
 
-- uni0B62.REV_BRACKET.141
+- uni0B08.REV_BRACKET.141
 
-- uni0B19.REV_BRACKET.141
+- charaoriya.REV_BRACKET.141
 
-- uni0B6B.REV_BRACKET.141
+- aicandraBinduoriya
 
-- uni0B37.REV_BRACKET.141
+- uni0B35.base.REV_BRACKET.141
 
-- uni0B0A.REV_BRACKET.141
+- uni0B42.REV_BRACKET.141
 
-- ngaraoriya.REV_BRACKET.141
+- uni0B24.REV_BRACKET.141
 
-- airephcandraBinduoriya
+- uni0B68.REV_BRACKET.141
 
-- uni0B07.REV_BRACKET.141
+- karaoriya.REV_BRACKET.141
 
-- uni0B1B.REV_BRACKET.141 
+- uni0B09.REV_BRACKET.141 
 
 - And 27 more.
 </code></pre>
@@ -268,23 +262,23 @@ aiLengthcandraBinduoriya.umbrella, rephaiLengthcandraBinduoriya.stem and rephaiL
 
 - uni0B4D
 
-- uni0B56
-
-- uni0B62
-
-- uni0B01
-
 - uni0B3F
-
-- uni0B3C
-
-- uni0B43
 
 - uni0B63
 
-- uni0B41 
+- uni0B01
 
-- And uni0B42 [code: unattached-dotted-circle-marks]
+- uni0B41
+
+- uni0B42
+
+- uni0B62
+
+- uni0B3C
+
+- uni0B43 
+
+- And uni0B56 [code: unattached-dotted-circle-marks]
 </code></pre>
 </span></li></ul></div></details>
 <details><summary>🔥 <strong>fonts/NotoSansOriyaUI/googlefonts/ttf/NotoSansOriyaUI-Thin.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The following glyphs could not be attached to the dotted circle glyph:</p>
@@ -292,23 +286,23 @@ aiLengthcandraBinduoriya.umbrella, rephaiLengthcandraBinduoriya.stem and rephaiL
 
 - uni0B4D
 
-- uni0B56
-
-- uni0B62
-
-- uni0B01
-
 - uni0B3F
-
-- uni0B3C
-
-- uni0B43
 
 - uni0B63
 
-- uni0B41 
+- uni0B01
 
-- And uni0B42 [code: unattached-dotted-circle-marks]
+- uni0B41
+
+- uni0B42
+
+- uni0B62
+
+- uni0B3C
+
+- uni0B43 
+
+- And uni0B56 [code: unattached-dotted-circle-marks]
 </code></pre>
 </span></li></ul></div></details>
 <h2>&lt;Section: fontbakery.profiles.gdef&gt; ⚠️⚠️</h2>
